Main improvements:
* color eggs are dispensable now

Bugfixes:
*

Minor improvements:
*