@@ -1,0 +1,10 @@
+/**
+ * Created by setyc on 10.12.2016.
+ */
+@ParametersAreNonnullByDefault
+@MethodsReturnNonnullByDefault
+package com.setycz.chickens.jei.throwing;
+
+import mcp.MethodsReturnNonnullByDefault;
+
+import javax.annotation.ParametersAreNonnullByDefault;
