@@ -79,6 +79,7 @@ gui.laying.time=%1$s-%2$smin.
 gui.breeding=Chicken Breeding
 gui.breeding.time=%1$s%%
 gui.drops=Chicken Drops
+gui.throws=Color Egg Throwing
 
 container.henhouse=Henhouse
 tile.henhouse.tooltip=It will automatically collect items from chickens in 9x9x9 radius when provided with hay bale.
